src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCP Dep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigDeals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Cycle__c</fullName>
        <label>Buying Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness of Needs</fullName>
                </value>
                <value>
                    <fullName>Assessments of Alternatives</fullName>
                </value>
                <value>
                    <fullName>Alleviation of Risks</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Achievements of Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Win_Probability__c</fullName>
        <inlineHelpText>= S (FCV * win probability) / S Calculated FCV
Is the probability considered for commercial dashboard and reporting
Possible Values: Calculated field, depending on the opportunity status and sub status, in %
Filled in by: Calculated Automatically</inlineHelpText>
        <label>SCP Dep</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompetidorConElQuePerdio__c</fullName>
        <label>Competidor con el que perdió</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dolar_Buget__c</fullName>
        <label>Dolar Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estado_de_la_oportunidad__c</fullName>
        <label>Estado de la oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Curso</fullName>
                </value>
                <value>
                    <fullName>Perdida</fullName>
                </value>
                <value>
                    <fullName>Firmado</fullName>
                </value>
                <value>
                    <fullName>Instalado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Billing_Start_Date__c</fullName>
        <label>Inicio Facturación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_FCV_Calculated__c</fullName>
        <description>Field to calculate the sum of Estimated in Suboportunities</description>
        <inlineHelpText>Adding up the estimated FCV of the sub opportunities win or in progress (not loss or cancelled)
Is the FCV considered for commercial dashboard and reporting
Posible Values: Calculated field in €.
Filled in by: Calculated automatically.</inlineHelpText>
        <label>SCP Dep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_FCV__c</fullName>
        <description>Estimated by the account manager in early stages of the opportunity (m€)</description>
        <inlineHelpText>The account manager indicates an estimation of the total value of the project.
Posible Values: Free field in €
Filled in by: The account manager.</inlineHelpText>
        <label>SCP Dep</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Year_End_Revenue__c</fullName>
        <label>Ingresos Totales año fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCV__c</fullName>
        <label>Monto Contrato (ARG)</label>
        <summarizedField>OpportunityLineItem.Campo_para_sumar_en_oportunidad__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fecha_comprometida_instalaci_n__c</fullName>
        <label>SCP Dep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_comprometida_instalaci_n_formula__c</fullName>
        <formula>CloseDate +  TMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha comprometida instalación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_probable_de_instalacion__c</fullName>
        <label>Fecha probable de instalación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Contract_Value__c</fullName>
        <label>SCP Dep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Impacto_ejercicio_actual_ARG__c</fullName>
        <formula>IF( YEAR(Fecha_probable_de_instalacion__c) = YEAR(TODAY()) , 

((Total_CUV_ARG__c + Total_CUV_USD__c * Dolar_Buget__c ) + (( Total_Abono_ARG__c + Total_Abono_USD__c * Dolar_Buget__c)* (12 - MONTH(Fecha_probable_de_instalacion__c) ))) 

, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacto ejercicio actual (ARG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Licitacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licitación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Big_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Big Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ingreso recurrente mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_Contrato_Dolar__c</fullName>
        <label>Monto Contrato (USD)</label>
        <summarizedField>OpportunityLineItem.Campo_para_sumar_en_oportunidad__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monto_total_Contrato_ARG__c</fullName>
        <formula>FCV__c + Monto_Contrato_Dolar__c* Dolar_Buget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto total Contrato (ARG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ObservacionRazonPerdida__c</fullName>
        <label>Observación razón perdida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probabilidad__c</fullName>
        <label>Probabilidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Razon_perdida__c</fullName>
        <label>Razón perdida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retroactiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retroactiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMI__c</fullName>
        <label>TMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Abono_ARG__c</fullName>
        <label>Total Abono (ARG)</label>
        <summarizedField>OpportunityLineItem.Cargo_totales_por_mes_Total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Abono_USD__c</fullName>
        <label>Total Abono (USD)</label>
        <summarizedField>OpportunityLineItem.Cargo_totales_por_mes_Total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_CUV_ARG__c</fullName>
        <label>SCP dep</label>
        <summarizedField>OpportunityLineItem.Cargo_unica_vez__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_CUV_ARG_resumen__c</fullName>
        <label>Total CUV (ARG)</label>
        <summarizedField>OpportunityLineItem.Cargo_por_nica_vez_total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_CUV_USD__c</fullName>
        <label>SCP Dep</label>
        <summarizedField>OpportunityLineItem.Cargo_unica_vez__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_CUV_USD_resumen__c</fullName>
        <label>Total CUV (USD)</label>
        <summarizedField>OpportunityLineItem.Cargo_por_nica_vez_total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_FCV__c</fullName>
        <description>Field in the header of a opportunity. It is based in 2 fields calculated via trigger and sums in the subopportunities</description>
        <formula>Estimated_FCV_Calculated__c * Calculated_Win_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Calculated FCV * calculated win probability
Possible Values: Calculated field in €.
Filled in by: Calculated automatically.</inlineHelpText>
        <label>SCP Dep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Charges__c</fullName>
        <label>Ingreso por única vez</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsold_Pipeline__c</fullName>
        <formula>Valor_Total_del_Contrato_calculado__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Contrato (FCV) (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Total_del_Contrato_calculado__c</fullName>
        <formula>Monthly_Charges__c * contract_duration_months__c + Unique_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Contrato (FCV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <label>Value Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weighted_Estimated_Year_End_Revenue__c</fullName>
        <formula>Estimated_Year_End_Revenue__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Totales año fiscal (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>contract_duration_months__c</fullName>
        <label>Duración del contrato (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fecha_probable_de_venta__c</fullName>
        <label>fecha probable de venta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>TMI_Positivo</fullName>
        <active>true</active>
        <description>El valor del TMI debe ser un número positivo.</description>
        <errorConditionFormula>TMI__c &lt; 0</errorConditionFormula>
        <errorMessage>El valor del TMI debe ser un número positivo.</errorMessage>
    </validationRules>
</CustomObject>